# knowledge4all

./: .gitignore  README.md  main.py  pyproject.toml
data/: dados_jira.json
src/core/: matcher.py  processor.py
src/reporting/: generator.py
src/utils/: data_loader.py
